#
# Copyright (c) 2005-2010 Thierry FOURNIER
# $Id: configure.ac 124 2006-05-10 21:46:12Z thierry $
#

# Process this file with autoconf to produce a configure script.
AC_INIT(arpalert, 0.3b)
AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(scripts/start/arpalert-debian)
AC_CONFIG_FILES(scripts/start/arpalert-fc4)
AC_CONFIG_FILES(scripts/start/arpalert-suse)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
#AC_PREFIX_DEFAULT(/usr/local/arpalert)
AC_PREFIX_DEFAULT(/opt/arpalert)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/syslog.h syslog.h, forcesyslogno=0, forcesyslogno=1)
AC_CHECK_HEADERS(pcap.h, , echo "didn't find pcap.h"; exit 1)
AC_CHECK_HEADERS(net/if_arp.h net/if_dl.h net/if.h)
AC_CHECK_HEADERS(netinet/if_ether.h netinet/in.h)
AC_CHECK_HEADERS(errno.h fcntl.h getopt.h grp.h pwd.h)
AC_CHECK_HEADERS(signal.h stdarg.h stdio.h stdlib.h string.h time.h unistd.h)
AC_CHECK_HEADERS(sys/ioctl.h sys/param.h sys/socket.h sys/stat.h sys/sysctl.h sys/types.h sys/wait.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS(alarm)

#check if libpcap.so is ok
AC_CHECK_LIB(pcap, pcap_lookupdev)

###
# Enable syslog system
AC_ARG_WITH(syslog, [  --with-syslog	Turn on Syslog support (default=yes)], with_syslog=$withval, with_syslog=yes)
if test "x$with_syslog" != "xno"; then
	if test $forcesyslogno = 0; then
		AC_DEFINE(USE_SYSLOG, 1, [Whether we have SYSLOG])
	fi
fi

###
# debug definitions
AC_ARG_ENABLE(debug, [  --enable-debug	Turn on debug system (default=no)], enable_debug=$enableval, enable_debug=no)
if test "x$enable_debug" != "xno"; then
	AC_DEFINE(DEBUG, 1, [If is debug compilation])
fi

AC_OUTPUT
